# llm4dfm-develop

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  poetry.toml  pyproject.toml  release.config.js  release.config.mjs  renovate.json  requirements.txt  settings.gradle  setup-container  setup-container.sh
.github/workflows/: build-check-and-deploy.yml  build-check-deploy.yml
datasets/: TODOexercise-1-original-text.yml  TODOexercise-1-sql-text.yml  TODOexercise-3-original-text.yml  TODOexercise-5-ground-truth.yml  TODOexercise-6-original-text.yml  TODOexercise-6-sql-text.yml  TODOexercise-8-ground-truth.yml  TODOexercise-8-original-text.yml  TODOexercise-9-demand-text.yml  TODOexercise-9-ground-truth.yml  exercise-1-demand-text.yml  exercise-1-ground-truth.yml  exercise-1.1-original-text.yml  exercise-1.1-sql-text.yml  exercise-1.2-original-text.yml  exercise-1.3-ground-truth.yml  exercise-1.4-ground-truth.yml  exercise-1.4-sql-text.yml  exercise-1.6-ground-truth.yml  exercise-10-ground-truth.yml  exercise-10-original-text.yml  exercise-2-ground-truth.yml  exercise-2-original-text.yml  exercise-2.1-ground-truth.yml  exercise-2.1-sql-text.yml  exercise-2.3-ground-truth.yml  exercise-2.3-original-text.yml  exercise-2.3-text-sql.yml  exercise-2.4-ground-truth.yml  exercise-3-ground-truth.yml  exercise-3-original-text.yml  exercise-4-demand-text.yml  exercise-4-ground-truth.yml  exercise-4-original-text.yml  exercise-4-sql-text.yml  exercise-5-demand-text.yml  exercise-5-ground-truth.yml  exercise-5-original-text.yml  exercise-5-sql-text.yml  exercise-6-demand-text.yml  (+17 more)
inputs/: old-prompts-sup-dic-4-iterative.yml  old-prompts-v1.example.yml  old-prompts-v1.yml  old-prompts-v2.yml  old-prompts-v3.yml  prompts-demand.yml  prompts-rq2-base.yml  prompts-rq2-example.yml  prompts-rq2-example1.yml  prompts-rq2-example2.yml  prompts-rq2-example3.yml  prompts-rq2.yml  prompts-rq3-alg-base.yml  prompts-rq3-alg-example.yml  prompts-rq3-alg-iterative.yml  prompts-rq3-alg.yml  prompts-rq3-dec-base.yml  prompts-rq3-dec-example.yml  prompts-rq3-dec.yml  prompts-rq4-base.yml  prompts-rq4-example.yml  prompts-rq4.yml  prompts-rq5-base.yml  prompts-rq5-example.yml  prompts-rq5.yml  prompts-sup-alg-1-base.yml  prompts-sup-alg-2-example.yml  prompts-sup-alg-3-example-iterative.yml  prompts-sup-dic-1-base.yml  prompts-sup-dic-2-example.yml  prompts-sup-dic-23-example-enhanced.yml  prompts-sup-dic-3-enhanced.yml  prompts-sup-dic-4-iterative.yml  prompts-v1.yml  prompts-v3.yml  prompts-v4.yml  prompts-v5.yml  todo-prompts-rq3-alg-iterative.yml
inputs/legacy/: prompts-rq2-example1.yml  prompts-rq2-example2.yml  prompts-rq3-alg-base.yml  prompts-rq3-alg-example.yml  prompts-rq3-dec-base.yml  prompts-rq3-dec-example.yml  prompts-rq4-example.yml  prompts-rq5-base.yml
llm4dfm/: __init__.py  __main__.py  run-all-metrics.sh  run-all.sh  run-api.sh  run-import.sh
llm4dfm/pipeline/: .env-example  __init__.py  aggregate_times.py  aggregate_times_cpu_gpu.py  aggregate_times_gpts.py  csv_graph.py  example.env  graph_utils.py  merge_graphs.py  metrics.py  models.py  pipeline.py  preprocess.py  utils.py
llm4dfm/resources/: automatic-metrics.sh  automatic-run.sh  conf-example.json  conf.json  credentials-example.yml  csv-graph-config-example.yml  metrics-config-example.yml  pipeline-config-example.yml  preprocess.yml  yml.html
outputs/automatic_run/: output.csv
results/: full-chat-example-rq5-exercise7.json
results/demand-rq3-dec-falcon3-10-comparison/: exercise-1-demand-rq3-dec-falcon3-10-inst-2025-04-02T01-24-29.yml  exercise-1-demand-rq3-dec-falcon3-10-inst-2025-04-02T01-34-00.yml  exercise-3-demand-rq3-dec-falcon3-10-inst-2025-04-02T01-50-07.yml  exercise-3-demand-rq3-dec-falcon3-10-inst-2025-04-02T02-02-04.yml  exercise-4-demand-rq3-dec-falcon3-10-inst-2025-04-02T02-12-15.yml  exercise-6-demand-rq3-dec-falcon3-10-inst-2025-04-02T02-33-47.yml  exercise-8-demand-rq3-dec-falcon3-10-inst-2025-04-02T03-04-02.yml  exercise-8-demand-rq3-dec-falcon3-10-inst-2025-04-02T03-29-53.yml  exercise-9-demand-rq3-dec-falcon3-10-inst-2025-04-02T03-33-46.yml  exercise-9-demand-rq3-dec-falcon3-10-inst-2025-04-02T03-40-36.yml  (+1 more)
tests/: __init__.py  utils.py
(+5256 files in other folders)
