[tool.poetry]
packages = [
    { include = "llm4dfm" },
]
name = "llm4dfm"
version = "0.1.0"
description = ""
authors = ["Luca Rubboli <luca.rubboli2@studio.unibo.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "2.4.0"
pandas = "2.3.3"
scikit-learn = "1.8.0"
scipy = "1.16.3"
notebook = "7.5.1"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
tqdm = "^4.66.5"
python-dotenv = "^1.0.1"
PyYAML = "^6.0.2"
openai = "2.14.0"
transformers = "4.57.3"
google-generativeai = "^0.8.4"
networkx = "^3.4.1"
torch = "2.5.1"
sentencepiece = "^0.2.1"
accelerate = "^1.10.1"

[tool.poetry.group.dev.dependencies]
coverage = "^7.4.0"
mypy = "^1.10.1"
poethepoet = "^0.40.0"
poetry = "^2.0.0"
pytest = "^9.0.0"

[tool.poe.tasks]
run_all = { shell = "cd llm4dfm && ./run-all.sh" }
automatic_run = "./llm4dfm/resources/automatic-run.sh"
automatic_metrics = "./llm4dfm/resources/automatic-metrics.sh"
test = "python -m unittest discover -v -s tests -p '*.py'"
coverage = "coverage run -m unittest discover -v -s tests -p '*.py'"
coverage-report = "coverage report -m"
coverage-html = "coverage html"
mypy = "mypy llm4dfm"
compile = "python -m compileall llm4dfm"

[tool.poetry.scripts]
# llm4dfm = "llm4dfm:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.mypy]
ignore_missing_imports = true
